--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "react-dom": "^18.2.0",
         "react-refresh": "^0.14.0",
         "tailwindcss": "^3.3.3"
+    },
+    "dependencies": {
+        "react-router-dom": "^6.15.0"
     }
 }
