--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
         "tailwindcss": "^3.3.3"
     },
     "dependencies": {
-        "react-router-dom": "^6.15.0"
+        "prop-types": "^15.8.1",
+        "react-redux": "^8.1.2",
+        "react-router-dom": "^6.15.0",
+        "redux": "^4.2.1"
     }
 }
